<resources>
    <string name="app_name">ControlMVP</string>
    <string name="servers">服务器</string>
    <string name="register">注册人员</string>
    <string name="online">在线人员</string>
    <string name="group">群组</string>
    <string name="filter">请输入工号</string>
    <string name="filter_name">请输入群名</string>
    <string name="search">搜索</string>
    <string name="nickname">昵称</string>
    <string name="employee">用户名</string>
    <string name="name">姓名</string>
    <string name="employee_id">工号</string>
    <string name="ip">IP</string>
    <string name="groupName">群名称</string>
    <string name="sum">总人数</string>
    <string name="address">地址</string>
    <string name="onlineNumber">在线人数</string>
    <string name="send_message">发消息</string>
    <string name="lockAccount">锁定账号</string>
    <string name="queryFriends">查询好友</string>
    <string name="changePwd">修改密码</string>
    <string name="entryDate">入职日期</string>
    <string name="duty">职务</string>
    <string name="department">部门</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="modify">修改群昵称</string>
    <string name="crowdID">群ID</string>
    <string name="memberList">显示群成员列表</string>
    <string name="topic">主题</string>
    <string name="autoEnter">是否自动加入设置</string>
    <string name="role">角色</string>
    <string name="title">控制台登录</string>
    <string name="login">登录</string>
    <string name="account">请输入账号</string>
    <string name="pwd">请输入密码</string>
    <string name="invite">邀请人</string>
    <string name="recipient">发送至：</string>
    <string name="editContent">在此处输入内容</string>
</resources>
