<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <com.lens.controlmvp.widget.ClearEditText
            android:id="@+id/filter_edit"
            android:layout_width="278dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext_normal"
            android:drawableStart="@drawable/search"
            android:hint="@string/filter"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="11dp"
            android:text="@string/search"
            android:textColor="#007DCE"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="#e8f5ff"
        android:orientation="horizontal">
        <TextView
            android:text="@string/employee_id"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1.7"
            android:layout_height="wrap_content"
            android:textColor="#007dc1"/>
        <include layout="@layout/view_line"/>
        <TextView
            android:text="@string/name"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1.4"
            android:layout_height="wrap_content"
            android:textColor="#007dc1"/>
        <include layout="@layout/view_line"/>
        <TextView
            android:text="@string/ip"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1.9"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="#007dc1"/>
    </LinearLayout>

     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/smartRefreshLayout">

         <pl.droidsonroids.gif.GifImageView
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:scaleType="centerCrop"
             android:src="@drawable/bg_refresh_online"/>

         <android.support.v7.widget.RecyclerView
             android:background="#FFFFFF"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>

     </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>
