<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="#e8f5ff"
        android:orientation="horizontal">
        <TextView
            android:text="@string/employee"
            android:textColor="#007dc1"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <include layout="@layout/view_line"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1.1"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="#007dc1"
            android:textSize="16sp"/>
        <include layout="@layout/view_line"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textColor="#007dc1"
            android:textSize="16sp"/>
        <include layout="@layout/view_line"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rl_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"/>

</LinearLayout>
