<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/recipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_recipient"
            android:textSize="15sp"
            android:textColor="#333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="330dp"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edittext"
        android:layout_gravity="center"
        android:gravity="top"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:minLines="8"
        android:maxLines="10"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:hint="@string/editContent" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_button"
            android:text="@string/send_message"
            android:textSize="15sp"
            android:textColor="#fefefe"/>


</LinearLayout>
