<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.lens.controlmvp.widget.ClearEditText
            android:id="@+id/filter_edit"
            android:layout_width="278dp"
            android:layout_height="32dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext_normal"
            android:drawableStart="@drawable/search"
            android:hint="@string/filter_name"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="11dp"
            android:text="@string/search"
            android:textColor="#007DCE"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="#e8f5ff"
        android:orientation="horizontal">
        <TextView
            android:text="@string/groupName"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#007dc1"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
        <include layout="@layout/view_line"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#007dc1"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/sum" />
        <include layout="@layout/view_line"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/smartRefreshLayout">
        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_refresh_group"/>

        <android.support.v7.widget.RecyclerView
            android:background="#FFFFFF"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>
